public/css/main.css
body {
background-color: #96C3E8;
background-image: url("/images/rugby-background.png");
background-repeat: no-repeat;
background-attachment: fixed;
background-position: center;
background-size: cover;
font-family: 'Noto Serif TC', serif;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: rgba(104, 111, 125, 0.75);
  /* font-family: 'Noto Serif TC', serif; */
}

nav li a {
  display: block;
  padding: 8px 16px;
  text-decoration: none;
  /* font-family: 'Noto Serif TC', serif; */
}

nav li a:hover {
  background-color: #555;
  color: white;
  /* font-family: 'Noto Serif TC', serif; */
}

nav ul li {
  float: right;
  color: #000;
  font-family: 'Noto Serif TC', serif;
}

h1 {
  text-align: center;
  font-family: 'Noto Serif TC', serif;
}

form {
  text-align: center;
  font-family: 'Noto Serif TC', serif;
}

.home-font {
  font-family: 'Frijole', cursive;
  text-align: center;
}

